documentation automate added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,21 @@
 {
-    "python.formatting.provider": "yapf"
+    "python.formatting.provider": "yapf",
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "explicit"
+    },
+    "typescript.preferences.importModuleSpecifier": "relative",
+    "typescript.suggest.autoImports": true,
+    "files.associations": {
+        "*.prisma": "prisma"
+    },
+    "emmet.includeLanguages": {
+        "typescript": "html"
+    },
+    "files.exclude": {
+        "**/node_modules": true,
+        "**/build": true,
+        "**/.git": true
+    }
 }
