--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
     "format": "prettier --write **/*.{ts,js,json,md}",
     "format:check": "prettier --check **/*.{ts,js,json,md}",
     "validate": "pnpm lint && pnpm type-check && pnpm build",
+    "docs:generate": "ts-node --esm scripts/generate-docs.ts",
+    "docs:validate": "node scripts/validate-docs.cjs",
+    "docs:auto-generate": "ts-node --esm scripts/auto-generate-docs.ts",
+    "docs:advanced-auto": "ts-node --esm scripts/advanced-auto-docs.ts",
+    "docs:simple-auto": "node scripts/simple-auto-docs.cjs",
+    "docs:serve": "cross-env NODE_ENV=development nodemon --exec 'node -e \"require(\\'./src/index.ts\\')\"' --watch src",
+    "docs:watch": "nodemon --ext ts,yml --watch src/routes --watch src/validations --exec \"pnpm docs:simple-auto\"",
     "prepare": "husky install"
   },
   "keywords": [
@@ -50,28 +57,30 @@
   "author": "Antonio Lázaro",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@faker-js/faker": "^9.9.0",
     "@jest/globals": "^30.0.4",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/glob": "^9.0.0",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.10",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/xss-filters": "^1.2.0",
-    "@eslint/js": "^9.30.1",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "cross-env": "^7.0.3",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "glob": "^11.0.3",
     "husky": "^9.1.7",
     "jest": "^30.0.4",
     "lint-staged": "^16.1.2",
@@ -99,13 +108,13 @@
     "helmet": "^8.1.0",
     "http-status": "^2.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pm2": "^6.0.8",
-    "jsonwebtoken": "^9.0.2",
     "winston": "^3.17.0",
     "xss-filters": "^1.2.7"
   },
