--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "@types/node": "^24.0.10",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
@@ -115,6 +117,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pm2": "^6.0.8",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "winston": "^3.17.0",
     "xss-filters": "^1.2.7"
   },
