--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "@types/xss-filters": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
@@ -119,6 +120,7 @@
     "pm2": "^6.0.8",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "xss-filters": "^1.2.7"
   },
