--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
@@ -114,6 +115,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
