--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false
   },
-  "include": ["src/**/*", "tests/**/*"],
+  "include": ["src", "scripts/*.ts", "tests"],
   "exclude": ["node_modules", "build", "dist"]
 }
